--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -237,12 +237,14 @@ Sort feature available since v1.3
 
 Sorts the list of person in the addressbook. +
 You may choose to sort based on a parameter and display in +
-ascending or descending order. +
+ascending or descending order.
+
+[NOTE]
+Sort command is NOT undoable nor redoable, since the order is not preserved, and will revert to original order on execution of many other commands.
 
 Format: `sort FIELD ORDER` +
 
 ****
-* The sort function does not save the order.
 * FIELD must be name, email or phone.
 * ORDER must be asc (ascending) or dsc (descending)
 ****
