--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -170,9 +170,9 @@ Examples:
 * `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01` +
 Adds a contact with the name `John Doe`, phone number `98765432`, email address `johnd@example.com`,
 address `John street, block 123, #01-01`.
-* `add n/Rob Cross p/92456877 p/64123456 e/rob@example.com a/Kent Ridge Drive 23 t/husband f/ dp/C:/Users/Seedu/Pictures/batman.png s/facebook r.cross10` +
+* `add n/Rob Cross p/92456877 p/64123456 e/rob@example.com a/Kent Ridge Drive 23 t/husband f/ s/facebook r.cross10 dp/C:/Users/Seedu/Pictures/batman.png` +
 Adds a `favorite` contact with the name `Rob Cross`, phone numbers `92456877` and `64123456`, email address `rob@example.com`,
-address `Kent Ridge Drive 23`, tag `husband`, a `Facebook` account with the username `r.cross10`, and adds a `display photo` imported from the location `C:/Users/Seedu/Desktop/batman.png`.
+address `Kent Ridge Drive 23`, tag `husband`, a `Facebook` account with the username `r.cross10`, and adds a `display photo` imported from the location `C:/Users/Seedu/Pictures/batman.png`.
 
 ==== Editing a person: `edit`
 
@@ -197,7 +197,7 @@ Examples:
 
 * `edit 1 p/91234567 e/johndoe@example.com` +
 Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
-* `edit 2 f/ dp/C:/Users/Seedu/Desktop/superman.png s/instagram janedoe123 s/facebook jane.doe` +
+* `edit 2 f/ dp/C:/Users/Seedu/Pictures/superman.png s/instagram janedoe123 s/facebook jane.doe` +
 Marks the 2nd person a `favorite` contact, changes the existing display photo to the new file specified by `C:/Users/Seedu/Pictures/superman.png` and edits the social media accounts to be
 a `Facebook` account with the username `jane.doe`,
 and an Instagram account with the username `janedoe123`.
