--- a/docs/team/johndoe.adoc
+++ b/docs/team/johndoe.adoc
@@ -1,21 +1,21 @@
-= John Doe - Project Portfolio
+= Ko Szu Yuan - Project Portfolio
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: AddressBook - Rubrika
+AddressBook - Rubrika is a desktop address book application for small and medium enterprises or those that are self-employed. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-W15-B1/Main/blob/master/collated/main/kosyoz.md[Functional code]] [https://github.com/CS2103AUG2017-W15-B1/Main/blob/master/collated/test/kosyoz.md[Test code]] {give links to collated code files}
 
-=== Enhancement Added: Undo/Redo
+=== Enhancement Added: Remarks
 
 ==== External behavior
 
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=undoredo]
+include::../UserGuide.adoc[tag=R]
 
 #End of Extract#
 
