--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,6 +4,8 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: images
 :stylesDir: stylesheets
 
+{sp}
+
 Unify -  was developed by the CS2103 W11-B4 team. +
 {empty} +
 Just over a year ago, we became fascinated by the idea of discovering and improving existing application by
@@ -17,7 +19,7 @@ We are computing students from NUS, and are based  in the http://www.comp.nus.ed
 
 === Nicholas Chua
 image::aboutus_nicholas.jpg[width="150", align="left"]
-{empty}[https://github.com/nicholaschuayunzhi[github]][https://cs2103aug2017-w11-b4.github.io/main/team/nicholas.html[project portfolio]]
+{empty}[https://github.com/nicholaschuayunzhi[github]] [<<nicholas#, portfolio>>]
 
 Role: Team Lead + Developer + Documentation + Integration + Testing
 Responsibilities: UI
@@ -26,7 +28,7 @@ Responsibilities: UI
 
 === Goh Wei Wen
 image::aboutus_weiwen.jpg[width="150", align="left"]
-{empty}[http://github.com/goweiwen[github]][https://cs2103aug2017-w11-b4.github.io/main/team/weiwen.html[project portfolio]]
+{empty}[http://github.com/goweiwen[github]] [<<weiwen#, portfolio>>]
 
 Role: Developer + Code Quality + Git Expert + Testing
 Responsibilities: Project Advisor
@@ -35,7 +37,7 @@ Responsibilities: Project Advisor
 
 === Ng Eng Sheng
 image::aboutus_engsheng.jpg[width="150", align="left"]
-{empty}[http://github.com/hanselblack[github]][https://cs2103aug2017-w11-b4.github.io/main/team/engsheng.html[project portfolio]]
+{empty}[http://github.com/hanselblack[github]] [<<engsheng#, portfolio>>]
 
 Role: Developer + Documentation + Deliverables and deadlines + Testing
 Responsibilities: Project Advisor
